# scholar-summaries

./: README.md  claim.py  css.py  prompts.py  pyproject.toml  scholarize.py
