[tool.poetry]
name = "scholar-summarize"
version = "0.1.0"
description = ""
authors = ["Andreas Stuhlmüller <andreas@stuhlmueller.org>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.10.4"
google-search-results = "^2.4.0"
streamlit = "^0.89.0"
requests = "^2.26.0"
aiohttp = "^3.7.4"
nest-asyncio = "^1.5.1"
sentence-transformers = "^2.0.0"
spacy = ">=2.2.0,<3.0.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
watchdog = "^2.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
